--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.6.1",
     "zustand": "^5.0.10"
   },
